--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "express-jwt": "^8.4.1",
+    "express-rate-limit": "^7.1.5",
     "express-session": "^1.17.3",
     "http-errors": "^2.0.0",
     "https": "^1.0.0",
